# Huffman-Shannon-Fano

./: README.md
ArchiveAlgorithm_HW/: BitIO.cpp  BitIO.h  CMakeLists.txt  Huffman.cpp  Huffman.h  ShannonFano.cpp  ShannonFano.h  Utils.cpp  Utils.h  main.cpp
TestSets/: ArchiveAlgorithm_HW  testing.sh
TestSets/archive/FirstSet/: .getxfer.514.286.mega  .getxfer.514.294.mega  .getxfer.514.299.mega  .getxfer.514.300.mega  .getxfer.514.302.mega  .getxfer.514.303.mega  .getxfer.514.304.mega  .getxfer.514.305.mega  .getxfer.514.306.mega  .getxfer.514.307.mega  .getxfer.514.308.mega  .getxfer.514.309.mega  .getxfer.514.310.mega  1_1.haff  20_2.haff  3_2.shan  40_1.haff  40_2.haff  40_2.shan  40_3.shan  60_1.haff  60_2.haff  60_3.shan  80_1.haff  80_1.shan  80_2.haff  80_2.shan  80_3.haff  80_3.shan
TestSets/archive/SecondSet/: 100_1.haff  100_1.shan  100_2.haff  100_2.shan  100_3.haff  100_3.shan  1_1.haff  1_1.shan  1_2.haff  1_2.shan  1_3.haff  1_3.shan  20_1.haff  20_1.shan  20_2.haff  20_2.shan  20_3.haff  20_3.shan  2_1.haff  2_1.shan  2_2.haff  2_2.shan  2_3.haff  2_3.shan  3_2.haff  3_2.shan  3_3.haff  3_3.shan  40_1.haff  40_1.shan  40_2.haff  40_2.shan  40_3.haff  40_3.shan  60_1.haff  60_1.shan  60_2.haff  60_2.shan  60_3.haff  60_3.shan  (+6 more)
TestSets/archive/ThirdSet/: .getxfer.514.274.mega  100_1.haff  100_1.shan  100_2.haff  100_2.shan  100_3.haff  100_3.shan  1_1.haff  1_1.shan  1_2.haff  1_2.shan  1_3.haff  1_3.shan  20_1.haff  20_1.shan  20_2.haff  20_2.shan  20_3.haff  20_3.shan  2_1.haff  2_1.shan  2_2.haff  2_3.haff  2_3.shan  3_1.haff  3_1.shan  3_2.haff  (+21 more)
(+71 files in other folders)
